# freight-ops

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_agents.py
config/: config.yaml  llms.json
notebooks/: getting_started.ipynb
scripts/: init_project.py
src/: __init__.py
src/agents/: __init__.py  base.py  compliance.py  dispatch.py  rate_analysis.py  route_optimizer.py  settlement.py
src/core/: __init__.py  config.py
src/data/: __init__.py
src/data/models/: __init__.py  load.py
src/tools/: __init__.py
tests/: __init__.py
